# OrientedBoundingBox

./: .gitignore  README.md  _config.yaml  custom_model.py  index.md  main.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini  yolo_from_scratch.py
.github/workflows/: tests.yaml
assets/DOTA_sample_data/split/labelTxt/: P0706__1__0___0.txt  P0706__1__0___256.txt  P0706__1__0___512.txt
assets/DOTA_sample_data/train/labelTxt/: P0001.txt
assets/DOTA_sample_data/val/labelTxt/: P0007.txt
code/data/: README.md  dataset.py
code/model/: __init__.py  dataset.py  gghl.py  yolov5.py
code/utils/: __init__.py  data.py  gaussian.lyx  gaussian.py
data/: DOTA.py  README.md  __init__.py  downloader.py
examples/: example.ipynb
notebooks/: OrientedRepPoints.ipynb  assign.ipynb  bbox.ipynb  example.ipynb  test.ipynb
sample_data/train/labelTxt/: P0000.txt  P0002.txt
sample_data/val/labelTxt/: P0003.txt  P0004.txt
src/model/: __init__.py  common.py  custom_model.py  dataset.py  feature_map.py  gghl.py  oriented_reppoints.py
src/obb/model/: custom_model.py  evaluate.py  feature_map.py  gghl.py  oriented_reppoints.py  oriented_reppoints_loss.py  rep_points.py  tracker.py  train.py  train_from_features.py  validate.py  yolov5.py
src/obb/not_used/: feature_map.py  gghl.py  rep_points.py
src/obb/utils/: __init__.py  box_ops.py  dataset.py  export_backbone_features.py  infer_ops.py  loss.py  poly_intersection.py  polygon.py  visualize.py
src/utils/: dataset.py  visualize.py
tests/: test_oriented_reppoints.py  test_otiented_reppoints.py
