[metadata]
name = obb
description = slap that like button
author = Lin Sinorodin
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    numpy
python_requires = >=3.6

[options.packages.find]
where=src
