[metadata]
name = obb
description = Oriented Bounding Box
author = Matan Haller and Lin Sinorodin
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.7
    tox>=3.24

[options.package_data]
obb = py.typed

[flake8]
max-line-length = 160
